--- a/svc/hecate/src/components/hud/MemoriesMenu.module.scss
+++ b/svc/hecate/src/components/hud/MemoriesMenu.module.scss
@@ -9,6 +9,7 @@ $bg-dark: rgba(10, 10, 10, 0.95);
   position: relative;
   display: flex;
   align-items: center;
+  z-index: 10001;
 }
 
 .memoriesButton {
